devops-system/k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: default
spec:
  replicas: 10
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:

      containers:
      - name: my-app
        image: zishan001/my-app:build-30
        ports:
        - containerPort: 80
